blockml/test/errors/11_report/e139/e139_one.view
view: e139_one
table: '[flow-1202:bqtest.orders]'
fields:
- dimension: dim1
  sql: 111

- dimension: dim2
  sql: 111
